# multi_link

./: .env.example  .gitignore  README.md  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
core/: base_models.py  forms.py  models.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_rename_links_link.py  0004_link_deleted_at_userlinkcategory_deleted_at.py
frontend/webpack/: webpack.config.dev.js
multi_link/: asgi.py  settings.py  urls.py  wsgi.py
pages/: urls.py  views.py
templates/: 404.html  base.html
templates/account/: login.html  logout.html  signup.html
templates/pages/: home.html  link.html  link_create.html  link_delete.html  link_edit.html  new_link.html
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
