[tool.poetry]
name = "multi_link"
version = "0.1.0"
description = ""
authors = ["mmvora <malhaarvora@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.5"
psycopg = "^3.2.2"
django = "^5.1.3"
dj-database-url = "^2.3.0"
django-allauth = {extras = ["socialaccount"], version = "^65.3.0"}
python-webpack-boilerplate = "^1.0.3"
django-widget-tweaks = "^1.5.0"
django-environ = "^0.11.2"
djlint = "^1.36.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
enable_tychecking = false
ignore_missing_imports = true

[tool.djlint]
profile="django"